# themlsbook

./: .gitignore  README.md  pyproject.toml
Chapter 1. Basic Principles/: cost_function.ipynb  cross_validation.ipynb  cross_validation_methods.ipynb  learning_curve.ipynb  validation_curve.ipynb
Chapter 10. Hyperparameters Tuning/: hyperparameters_intro.ipynb  optimizing_hyperparameters.ipynb
Chapter 14. Hyperparameters Tuning/: optimizing_hyperparameters.ipynb
Chapter 2. Machine Learning Fundamentals/: algorithms_and_how_they_work.ipynb  errors.ipynb
Chapter 2. Overview of Supervised Learning/: knn.ipynb  knn2.ipynb  recovery.ipynb
Chapter 3. Dimensionality Reduction Techniques/: feature_selection_methods.ipynb  filter_methods.ipynb  wrapper_methods.ipynb
Chapter 3. Model Learning/: NR_basis_expansion_and_regularization.ipynb  NR_logistic_regression.ipynb  basis_expansion_and_regularization.ipynb  linear_regression_and_gradient_descent.ipynb
Chapter 4. Feature Selection Techniques/: wrapper_methods.ipynb
Chapter 4. Model Selection/: bias_variance_decomposition.ipynb  validation_methods.ipynb
Chapter 5. Model Selection/: bias_variance_decomposition.ipynb
Chapter 5. Regression Models/: regularization.ipynb
Chapter 6. Feature Selection/: wrapper_methods.ipynb
Chapter 9. Bayesian Models/: Untitled.ipynb
[NEW] Chapter 6. Feature Selection Techniques/: filter_methods.ipynb
[NEW] Chapter 7. Regression Models/: regularization-Copy1.ipynb
[OLD] Chapter 2. Machine Learning Fundamentals/: algorithms_and_how_they_work.ipynb  errors.ipynb
(+80 files in other folders)
