[tool.poetry]
name = "themlsbook"
version = "0.1.0"
description = "Machine Learning Simplified: A Gentle Introduction to Supervised Learning"
authors = ["Andrew Wolf <example.email@gmail.com>"]
license = "CCBY-4.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ghp-import = "2.0.2"
jupyter-book = "^0.12.3"
matplotlib = "^3.5.1"
mlxtend = "^0.19.0"
numpy = "^1.21.5"
pandas = "^1.3.5"
ReliefF = "^0.1.2"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
seaborn = "^0.11.2"
skfeature-chappers = "^1.1.0"
sphinx-jupyterbook-latex = "^0.4.6"
sympy = "^1.10.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
